# Code-Collection

./: .gitignore  README.md  firstNonrepearing.cpp  mergeSort.py  mermaidPlayground.md  piDay2022.py  piDay2022_monteCarlo.py
Azure/: azuredeploy.json
Blinkmorse/: Blinkmorse.ino
C and C++/: GCD.cpp  aes.cpp  arctanPi.cpp  binaryTree.cpp  bit++.cpp  ceasarCipher.cpp  ceasarCipherCracker.cpp  desDecryptAyan.cpp  desDecryption.cpp  desEncryp.c  desEncryptAyan.cpp  desEncryption.cpp  desKeyGen.c  desKeyGenAyan.c  diffi.cpp  encripted.txt  eucledian.cpp  extended.cpp  extendedEucledian.cpp  heap.cpp  hello.cpp  hillCipher.cpp  hillCipher2.cpp  linkedList.cpp  log.txt  log2.txt  message.txt  newtonRapsonMethod.c  parallelSum.cpp  parallelSum2.cpp  pi.cpp  playFair.cpp  postfix  postfix.cpp  rangedPrime.cpp  rsa.cpp  server.c  sha1.cpp  test  text  (+3 more)
C and C++/stl_concepts/: CMakeLists.txt  MyVector.cpp  MyVector.hpp  main.cpp  set.cpp
CMake/proj1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cxx  proj1  proj1Config.h
CMake/proj1/Mathlib/: CMakeCache.txt  CMakeLists.txt  Makefile  Mathlib.h  cmake_install.cmake  sqrtFunc.cxx
python/: anime.py  bankers.py  bankers2.py  cardetection.py  chatbot.py  chatbot2.py  creatingWater.py  digitReader.py  eyeTracking1.py  findingCamera.py  gesturedetection.py  gpuSupport.py  inventory3.py  inventory4.py  inventory5.py  inventory6.py  mnist_model.h5  porg1.py  prog2.py  revStack.py  sentimentAnalysis.py  test.py
rust/: helloWorld  helloWorld.rs
temperature_sensor/: temperature_sensor.ino
(+284 files in other folders)
